WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58002
REGRESSION (
r73993
): Default Arabic line spacing has gotten very loose when the specified font is not Arabic
https://bugs.webkit.org/show_bug.cgi?id=58002
Summary
REGRESSION (r73993): Default Arabic line spacing has gotten very loose when t...
mitz
Reported
2011-04-06 17:52:28 PDT
<
rdar://problem/9084761
>
Attachments
Do not apply vertical metrics tweaks to Geeza Pro except in Leopard
(388.55 KB, patch)
2011-04-06 17:57 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-04-06 17:57:46 PDT
Created
attachment 88550
[details]
Do not apply vertical metrics tweaks to Geeza Pro except in Leopard
mitz
Comment 2
2011-04-06 18:03:24 PDT
Committed
r83126
. <
http://trac.webkit.org/changeset/83126
>
WebKit Review Bot
Comment 3
2011-04-06 19:04:09 PDT
http://trac.webkit.org/changeset/83126
might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: fast/dom/52776.html fast/text/complex-text-opacity.html fast/text/international/bidi-AN-after-L.html fast/text/international/bidi-AN-after-empty-run.html fast/text/international/bidi-CS-after-AN.html fast/text/international/bidi-mirror-he-ar.html fast/text/international/bidi-neutral-run.html platform/mac/fast/text/international/Geeza-Pro-vertical-metrics-adjustment.html
mitz
Comment 4
2011-04-06 19:38:46 PDT
(In reply to
comment #3
)
>
http://trac.webkit.org/changeset/83126
might have broken SnowLeopard Intel Release (Tests) > The following tests are not passing: > fast/dom/52776.html > fast/text/complex-text-opacity.html > fast/text/international/bidi-AN-after-L.html > fast/text/international/bidi-AN-after-empty-run.html > fast/text/international/bidi-CS-after-AN.html > fast/text/international/bidi-mirror-he-ar.html > fast/text/international/bidi-neutral-run.html > platform/mac/fast/text/international/Geeza-Pro-vertical-metrics-adjustment.html
I am going to double check the results I have generated.
mitz
Comment 5
2011-04-06 20:07:05 PDT
Tried to land the correct expected results in
r83132
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug