<rdar://problem/9084761> REGRESSION (r73993): Default Arabic line spacing has gotten very loose when the specified font is not Arabic https://bugs.webkit.org/show_bug.cgi?id=58002

Reviewed by Darin Adler.

Source/WebCore:

* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformInit): The version of Geeza Pro in Snow Leopard
does not require the vertical metrics tweaks that were needed in Leopard. That the
tweaks were being applied went mostly unnoticed until r73993, because until then it
only affected cases where Geeza Pro was specified, not when it occurred as a fallback
font.

LayoutTests:

* platform/mac/fast/dom/52776-expected.checksum:
* platform/mac/fast/dom/52776-expected.png:
* platform/mac/fast/dom/52776-expected.txt:
* platform/mac/fast/text/complex-text-opacity-expected.txt:
* platform/mac/fast/text/international/Geeza-Pro-vertical-metrics-adjustment-expected.txt:
* platform/mac/fast/text/international/bidi-AN-after-L-expected.checksum:
* platform/mac/fast/text/international/bidi-AN-after-L-expected.png:
* platform/mac/fast/text/international/bidi-AN-after-L-expected.txt:
* platform/mac/fast/text/international/bidi-AN-after-empty-run-expected.checksum:
* platform/mac/fast/text/international/bidi-AN-after-empty-run-expected.png:
* platform/mac/fast/text/international/bidi-AN-after-empty-run-expected.txt:
* platform/mac/fast/text/international/bidi-CS-after-AN-expected.txt:
* platform/mac/fast/text/international/bidi-mirror-he-ar-expected.txt:
* platform/mac/fast/text/international/bidi-neutral-run-expected.checksum:
* platform/mac/fast/text/international/bidi-neutral-run-expected.png:
* platform/mac/fast/text/international/bidi-neutral-run-expected.txt:
* platform/mac/platform/mac/fast/text/international/Geeza-Pro-vertical-metrics-adjustment-expected.checksum:
* platform/mac/platform/mac/fast/text/international/Geeza-Pro-vertical-metrics-adjustment-expected.png:



Canonical link: https://commits.webkit.org/72906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83126 268f45cc-cd09-0410-ab3c-d52691b4dbfc